--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="col-xl-auto col-lg-1">
                 <div class="top-nav_user">
-                    <img src="img/icons/user.png" alt="user">
+                    <img src="img/icons/user.jpeg" alt="user">
                     <h3>Admin</h3>
                 </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="slider-blocks">
                     <div class="slider-block">
-                        <img src="img/slider/photo-of-person-handing-card.png" alt="photo">
+                        <img src="img/slider/photo-of-person-handing-card.jpeg" alt="photo">
                         <div class="slider-block_content">
                             <h1>中国買付代行は信頼の「タオバ<br>オ超特急!」にお任せください!</h1>
                             <h2>お客様に良質で最適なサービスをご提案いたします。</h2>
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="slider-block">
-                        <img src="img/slider/photo-of-person-handing-card.png" alt="photo">
+                        <img src="img/slider/photo-of-person-handing-card.jpeg" alt="photo">
                         <div class="slider-block_content">
                             <h1>中国買付代行は信頼の「タオバ<br>オ超特急!」にお任せください!</h1>
                             <h2>お客様に良質で最適なサービスをご提案いたします。</h2>
@@ -87,7 +87,7 @@
                         <div class="col-12">
                             <div class="content-block1-item content-block1-item_primary">
                                 <div class="content-block1-item_img">
-                                    <img src="img/icons/partnership.png" alt="partnership">
+                                    <img src="img/icons/partnership.jpeg" alt="partnership">
                                 </div>
                                 <div class="content-block1-item_h">
                                     <h2>中国語は一切不要です！</h2>
@@ -99,7 +99,7 @@
                         <div class="col-12">
                             <div class="content-block1-item content-block1-item_orange">
                                 <div class="content-block1-item_img">
-                                    <img src="img/icons/price.png" alt="price">
+                                    <img src="img/icons/price.jpeg" alt="price">
                                 </div>
                                 <div class="content-block1-item_h">
                                     <h2>格安な料金体系！</h2>
@@ -111,7 +111,7 @@
                         <div class="col-12">
                             <div class="content-block1-item content-block1-item_green">
                                 <div class="content-block1-item_img">
-                                    <img src="img/icons/assurance.png" alt="assurance">
+                                    <img src="img/icons/assurance.jpeg" alt="assurance">
                                 </div>
                                 <div class="content-block1-item_h content-block1-item_h_text-black">
                                     <h2>品質管理はお任せください！</h2>
@@ -123,7 +123,7 @@
                         <div class="col-12">
                             <div class="content-block1-item content-block1-item_grey">
                                 <div class="content-block1-item_img">
-                                    <img src="img/icons/amaz.png" alt="amaz">
+                                    <img src="img/icons/amazon.jpeg" alt="amaz">
                                 </div>
                                 <div class="content-block1-item_h content-block1-item_h_text-heavy">
                                     <h2>Amazon FBA直送対応！</h2>
@@ -136,7 +136,7 @@
                         <div class="col-12">
                             <div class="content-block1-item content-block1-item_yellow">
                                 <div class="content-block1-item_img">
-                                    <img src="img/icons/production.png" alt="production">
+                                    <img src="img/icons/production.jpeg" alt="production">
                                 </div>
                                 <div class="content-block1-item_h content-block1-item_h_text-heavy content-block1-item_h_text-black">
                                     <h2>OEM生産もお任せください！</h2>
@@ -148,7 +148,7 @@
                         <div class="col-12">
                             <div class="content-block1-item content-block1-item_aqua">
                                 <div class="content-block1-item_img">
-                                    <img src="img/icons/japan.png" alt="japan">
+                                    <img src="img/icons/japan.jpeg" alt="japan">
                                 </div>
                                 <div class="content-block1-item_h">
                                     <h2>全て日本円で決済可能です！海外送金は一切不要です！</h2>
@@ -232,7 +232,7 @@
                     <div class="row content-block4-item">
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card1.png" alt="card1">
+                                <img src="img/cards/card1.jpeg" alt="card1">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -246,7 +246,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card2.png" alt="card2">
+                                <img src="img/cards/card2.jpeg" alt="card2">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -260,7 +260,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card3.png" alt="card3">
+                                <img src="img/cards/card3.jpeg" alt="card3">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -274,7 +274,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card4.png" alt="card4">
+                                <img src="img/cards/card4.jpeg" alt="card4">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -288,7 +288,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card5.png" alt="card5">
+                                <img src="img/cards/card5.jpeg" alt="card5">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -302,7 +302,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card6.png" alt="card6">
+                                <img src="img/cards/card6.jpeg" alt="card6">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -316,7 +316,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card1.png" alt="card1">
+                                <img src="img/cards/card1.jpeg" alt="card1">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -330,7 +330,7 @@
                         <!-- col -->
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="content-block4-item_card">
-                                <img src="img/cards/card2.png" alt="card2">
+                                <img src="img/cards/card2.jpeg" alt="card2">
                                 <div class="content-block4-item_card-content">
                                     <div class="content-block4-item_card-content-img">
                                         <img src="img/cards/card-icon.png" alt="card-icon">
@@ -356,7 +356,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="content-block5-item">
-                                <img src="img/block5/card1.png" alt="card1">
+                                <img src="img/block5/cardd1.jpeg" alt="card1">
                                 <div class="content-block5-item_content">
                                     <h3>この部分はおすすめ商品の欄に変更出来ますでしょうか？</h3>
                                     <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい , 
@@ -370,7 +370,7 @@
                         <!-- /.col-12 -->
                         <div class="col-12">
                             <div class="content-block5-item">
-                                <img src="img/block5/card2.png" alt="card2">
+                                <img src="img/block5/cardd2.jpeg" alt="card2">
                                 <div class="content-block5-item_content">
                                     <h3>横に3マス　縦に3マス程度で写真・説明文・購入先リンクの貼付が必要です。</h3>
                                     <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
@@ -384,7 +384,7 @@
                         <!-- /.col-12 -->
                         <div class="col-12">
                             <div class="content-block5-item">
-                                <img src="img/block5/card3.png" alt="card3">
+                                <img src="img/block5/cardd3.jpeg" alt="card3">
                                 <div class="content-block5-item_content">
                                     <h3>基礎知識と同じで過去の提案履歴も表示出来るようにお願いします。</h3>
                                     <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
@@ -398,7 +398,7 @@
                         <!-- /.col-12 -->
                         <div class="col-12">
                             <div class="content-block5-item">
-                                <img src="img/block5/card3.png" alt="card3">
+                                <img src="img/block5/cardd3.jpeg" alt="card3">
                                 <div class="content-block5-item_content">
                                     <h3>基礎知識と同じで過去の提案履歴も表示出来るようにお願いします。</h3>
                                     <h4>あなたは中国輸入で無在庫で稼ぎたいとお考えではないでしょうか？ 当社、タオバオ直行便ではタオバオで販売されてい ,  
