--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
             <div class="services1">
                 <div class="services1-item">
                     <div class="services1-item-img">
-                        <img src="img/services-page/services1.png" alt="services1">
+                        <img src="img/services-page/services1.jpeg" alt="services1">
                         <div class="services1-item-img_block">
                             <img src="img/services-page/services-icon.png" alt="icon">
                         </div> 
@@ -123,7 +123,7 @@
             <div class="services2">
                 <div class="services2-item">
                     <div class="services2-item-img">
-                        <img src="img/services-page/services2.png" alt="services2">
+                        <img src="img/services-page/services2.jpeg" alt="services2">
                         <div class="services2-item-img_block">
                             <img src="img/services-page/services-icon.png" alt="icon">
                         </div> 
@@ -157,7 +157,7 @@
 
             <div class="services3">
                 <div class="services3-item">
-                    <img src="img/services-page/services3.png" alt="services3">
+                    <img src="img/services-page/services3.jpeg" alt="services3">
                     <div class="services3-item-img">
                         <img src="img/services-page/services-icon.png" alt="icon">
                     </div> 
@@ -185,7 +185,7 @@
             <div class="services4">
                 <div class="services4-item">
                     <div class="services4-item-img">
-                        <img src="img/services-page/services4.png" alt="services4">
+                        <img src="img/services-page/services4.jpeg" alt="services4">
                         <div class="services4-item-img_block">
                             <img src="img/services-page/services-icon.png" alt="icon">
                         </div> 
@@ -252,7 +252,7 @@
             <div class="services6">
                 <div class="services6-item">
                     <div class="services6-item-img">
-                        <img src="img/services-page/services6.png" alt="services6">
+                        <img src="img/services-page/services6.jpeg" alt="services6">
                         <div class="services6-item-img_block">
                             <img src="img/services-page/services-icon.png" alt="icon">
                         </div> 
@@ -299,7 +299,7 @@
             <div class="services7">
                 <div class="services7-item">
                     <div class="services7-item-img">
-                        <img src="img/services-page/services7.png" alt="services7">
+                        <img src="img/services-page/services7.jpeg" alt="services7">
                         <div class="services7-item-img_block">
                             <img src="img/services-page/services-icon.png" alt="icon">
                         </div> 
