Revert "speed Done"
This reverts commit 511170c8bfa2456ded2ec0bcef9e51a1050555b7.

--- a/company.html
+++ b/company.html
@@ -63,7 +63,7 @@
        <div class="container">
             <div class="company_1">
                 <div class="company_1-item">
-                    <img src="img/company_1.jpeg" alt="company_1">
+                    <img src="img/company_1.png" alt="company_1">
                     <div class="company_1-item-content">
                         <h1>運営会社紹介</h1>
                         <hr>
@@ -125,7 +125,7 @@
                 <h1>私達がサポート致します</h1>
                 <h3>長年培った日本向け貿易の実績と信頼でお客様のご要望に最大限お答え致します。</h3>
                 <div class="company_2-item">
-                    <img src="img/company_2.jpeg" alt="company_2">
+                    <img src="img/company_2.png" alt="company_2">
                     <p>毎度お世話になっております。<br>　
                         スニフグループ の代表の 呉燁彪「ゴ ヨウ ヒョウ」です。 私は生まれも育ちも中国の生粋の中国人です。<br>
                         私の故郷は世界の雑貨卸売市場があることで有名なイーウー（義烏）です。<br>
