--- a/guide.html
+++ b/guide.html
@@ -180,7 +180,7 @@
                         <div class="btn btn-red">続きを読む</div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_img">
-                        <img src="img/guide/cards_2/card2_1.jpeg" alt="1">
+                        <img src="img/guide/cards_2/card2_1.png" alt="1">
                     </div>
                     <!-- col -->
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_white">
@@ -191,7 +191,7 @@
                         <div class="btn btn-red">続きを読む</div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_img">
-                        <img src="img/guide/cards_2/card2_2.jpeg" alt="1">
+                        <img src="img/guide/cards_2/card2_2.png" alt="1">
                     </div>
                     <!-- col -->
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_white">
@@ -202,7 +202,7 @@
                         <div class="btn btn-red">続きを読む</div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_img">
-                        <img src="img/guide/cards_2/card2_3.jpeg" alt="1">
+                        <img src="img/guide/cards_2/card2_3.png" alt="1">
                     </div>
                     <!-- col -->
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_white">
@@ -213,7 +213,7 @@
                         <div class="btn btn-red">続きを読む</div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 guide-cards2_img">
-                        <img src="img/guide/cards_2/card2_4.jpeg" alt="1">
+                        <img src="img/guide/cards_2/card2_4.png" alt="1">
                     </div>
                     <!-- col -->
                 </div>
