--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="news_1-card news_1-card_red">
-                            <img src="img/news/card-img.jpeg" alt="card-img">
+                            <img src="img/news/card-img.png" alt="card-img">
                             <div class="news_1-card__content">
                                 <h3>SNIFF GROUPの魅力！</h3>
                                 <div class="news_1-card__content-icon">
@@ -85,7 +85,7 @@
                     <!-- col -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="news_1-card news_1-card_yellow">
-                            <img src="img/news/card-img.jpeg" alt="card-img">
+                            <img src="img/news/card-img.png" alt="card-img">
                             <div class="news_1-card__content">
                                 <h3>SNIFF GROUPの魅力！</h3>
                                 <div class="news_1-card__content-icon">
@@ -105,7 +105,7 @@
                     <!-- col -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="news_1-card news_1-card_primary">
-                            <img src="img/news/card-img.jpeg" alt="card-img">
+                            <img src="img/news/card-img.png" alt="card-img">
                             <div class="news_1-card__content">
                                 <h3>SNIFF GROUPの魅力！</h3>
                                 <div class="news_1-card__content-icon">
@@ -125,7 +125,7 @@
                     <!-- col -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="news_1-card news_1-card_green">
-                            <img src="img/news/card-img.jpeg" alt="card-img">
+                            <img src="img/news/card-img.png" alt="card-img">
                             <div class="news_1-card__content">
                                 <h3>SNIFF GROUPの魅力！</h3>
                                 <div class="news_1-card__content-icon">
@@ -145,7 +145,7 @@
                     <!-- col -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="news_1-card news_1-card_grey">
-                            <img src="img/news/card-img.jpeg" alt="card-img">
+                            <img src="img/news/card-img.png" alt="card-img">
                             <div class="news_1-card__content">
                                 <h3>SNIFF GROUPの魅力！</h3>
                                 <div class="news_1-card__content-icon">
@@ -165,7 +165,7 @@
                     <!-- col -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="news_1-card news_1-card_orange">
-                            <img src="img/news/card-img.jpeg" alt="card-img">
+                            <img src="img/news/card-img.png" alt="card-img">
                             <div class="news_1-card__content">
                                 <h3>SNIFF GROUPの魅力！</h3>
                                 <div class="news_1-card__content-icon">
