--- a/company.html
+++ b/company.html
@@ -36,7 +36,7 @@
                     <li><a href="register.html">Register</a></li>
                     <li><a href="guide.html">Guide</a></li>
                     <li><a href="company.html" class="top-nav_menu__active">Company</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
+                    <!-- <li><a href="pricing.html">Pricing</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
