--- a/company.html
+++ b/company.html
@@ -43,7 +43,7 @@
 
             <div class="col-xl-auto col-lg-1">
                 <div class="top-nav_user">
-                    <img src="img/icons/user.png" alt="user">
+                    <img src="img/icons/user.jpeg" alt="user">
                     <h3>Admin</h3>
                 </div>
             </div>
